--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -2,7 +2,7 @@ name: Auto
 
 on:
   schedule:
-    - cron: "50 19 * * *" # 北京时间下午16:60
+    - cron: "50 07 * * *" # 北京时间上午07:60
   workflow_dispatch:
 
 env:
